--- a/qsimulator/CMakeLists.txt
+++ b/qsimulator/CMakeLists.txt
@@ -1,3 +1,19 @@
 cmake_minimum_required(VERSION 3.10 FATAL_ERROR)
 
 add_subdirectory(quantum-engine)
+
+set(TARGET qsimulator)
+
+file(GLOB TARGET_SRC
+    "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/*.h"
+)
+add_executable(${TARGET} ${TARGET_SRC})
+
+target_compile_features(${TARGET} PUBLIC cxx_std_17)
+
+target_link_libraries(${TARGET}
+    PRIVATE
+        GSL
+        qengine
+)
