сделана shared либа

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,3 +3,4 @@ cmake_minimum_required(VERSION 3.10 FATAL_ERROR)
 project(quantum-simulator)
 
 add_subdirectory(qsimulator)
+add_subdirectory(examples)
